<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_mode"
            android:icon="@drawable/ic_mode"
            android:title="@string/mode_settings" />
        <item
            android:id="@+id/nav_app_proxy"
            android:icon="@drawable/ic_app"
            android:title="@string/app_proxy" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_join_tg"
            android:icon="@drawable/ic_tg"
            android:title="@string/join_tg" />
        <item
            android:id="@+id/nav_website"
            android:icon="@drawable/ic_web"
            android:title="@string/official_website" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
    </group>

</menu>
